Добавил EsLint, StyleLint, TS

--- a/src/styles/styles.pcss
+++ b/src/styles/styles.pcss
@@ -21,9 +21,10 @@ body {
     height: 100vh;
     background: red;
     background: linear-gradient(243.03deg, var(--blue) 0%, var(--red) 131.67%);
-    font-family: 'Inter', sans-serif;;
+    font-family: 'Inter', sans-serif;
     font-style: normal;
     font-size: 16px;
+
     font-size: 16px;
 }
 
