Переписал компоненты и страницы с использованием Block

--- a/src/styles/variables.pcss
+++ b/src/styles/variables.pcss
@@ -1,6 +1,7 @@
 :root {
     --blue: #3369F3;
     --red: #FF2F2F;
+    --redDark: #9d0000;
     --white: #ffffff;
     --card-background: rgba(255, 255, 255, 0.29);
 }
