--- a/src/styles/styles.pcss
+++ b/src/styles/styles.pcss
@@ -1,18 +1,20 @@
 @import "variables.pcss";
-@import "../partials/pages/Authorization/authorizationStyles.pcss";
-@import "../partials/pages/Registration/registrationStyles.pcss";
-@import "../partials/pages/PersonalInfo/personalInfoStyles.pcss";
-@import "../partials/pages/PersonalInfoEdit/personalInfoEditStyles.pcss";
-@import "../partials/pages/MainPage/mainStyles.pcss";
-@import "../partials/components/errorPageContent/errorPageContentStyles.pcss";
-@import "../partials/components/simpleInput/simpleInputStyles.pcss";
-@import "../partials/components/generalButton/generalButtonStyles.pcss";
-@import "../partials/components/linkButton/linkButtonStyles.pcss";
-@import "../partials/components/linkButtonWithArrow/linkButtonWithArrowStyles.pcss";
-@import "../partials/components/rowInfo/rowInfoStyles.pcss";
-@import "../partials/components/avatar/avatarStyles.pcss";
-@import "../partials/components/rowInput/rowInputStyles.pcss";
-@import "../partials/components/fileInput/fileInputStyles.pcss";
+
+@import "../pages/HomePage/homePage.pcss";
+@import "../pages/Authorization/authorizationStyles.pcss";
+@import "../pages/Registration/registrationStyles.pcss";
+@import "../pages/PersonalInfo/personalInfoStyles.pcss";
+@import "../pages/PersonalInfoEdit/personalInfoEditStyles.pcss";
+
+@import "../components/LinkButton/linkButtonStyles.pcss";
+@import "../components/ErrorPageContent/errorPageContentStyles.pcss";
+@import "../components/linkButton/linkButtonStyles.pcss";
+@import "../components/SimpleInput/simpleInputStyles.pcss";
+@import "../components/Button/buttonStyles.pcss";
+@import "../components/RowInfo/rowInfoStyles.pcss";
+@import "../components/Avatar/avatarStyles.pcss";
+@import "../components/RowInput/rowInputStyles.pcss";
+@import "../components/FileInput/fileInputStyles.pcss";
 
 body {
     margin: 0;
@@ -27,6 +29,10 @@ body {
 
     font-size: 16px;
 }
+#root{
+    height: 100%;
+}
+
 
 h1 {
     font-weight: 500;
