Настроил валидацию полей форм

--- a/src/components/SimpleInput/simpleInput.hbs
+++ b/src/components/SimpleInput/simpleInput.hbs
@@ -1,5 +1,5 @@
 <div class="simpleInput__wrapper">
-    <input name="{{name}}" type="{{type}}" value="{{value}}" class="simpleInput__item" placeholder=" "/>
+    <input required="{{required}}" name="{{name}}" type="{{type}}" value="{{value}}" class="simpleInput__item" placeholder=" "/>
     <label class="simpleInput__label" >{{label}}</label>
     {{#if error}}
         <div class="simpleInput__error">{{error}}</div>
