--- a/src/pages/PersonalInfoEdit/personalInfoEdit.hbs
+++ b/src/pages/PersonalInfoEdit/personalInfoEdit.hbs
@@ -1,8 +1,8 @@
 <div class="personalInfoEdit__card">
     <form>
         <div class="personalInfoEdit__avatarBlock">
+            {{{photo}}}
             {{{avatar}}}
-            {{{fileInput}}}
         </div>
         <div class="personalInfoEdit__info">
             {{{email}}}
