--- a/src/components/SimpleInput/simpleInputStyles.pcss
+++ b/src/components/SimpleInput/simpleInputStyles.pcss
@@ -1,6 +1,8 @@
 .simpleInput{
     &__wrapper {
         position: relative;
+        width: 280px;
+
     }
 
     &__item {
@@ -40,6 +42,9 @@
 
 @media screen and (max-width: 768px) {
     .simpleInput{
+        &__wrapper{
+            width: 150px;
+        }
         &__item {
             font-size: 12px;
             width: 150px;
