--- a/src/components/FileInput/fileInputStyles.pcss
+++ b/src/components/FileInput/fileInputStyles.pcss
@@ -10,5 +10,9 @@
         cursor: pointer;
         border-radius: 8px;
     }
-
+    &__error {
+        color: var(--redDark);
+        margin-top: 4px;
+        font-size: 12px;
+    }
 }
