--- a/src/components/FileInput/fileInput.hbs
+++ b/src/components/FileInput/fileInput.hbs
@@ -1,3 +1,5 @@
 <label for="file-upload" class="fileInput__label">{{text}}</label>
-<input id="file-upload" class="fileInput__input" type="file" name="{{name}}">
-
+<input required="{{required}}" id="file-upload" class="fileInput__input" type="file" name="{{name}}">
+{{#if error}}
+    <div class="fileInput__error">{{error}}</div>
+{{/if}}
