--- a/src/components/Avatar/avatar.hbs
+++ b/src/components/Avatar/avatar.hbs
@@ -1,4 +1,6 @@
-<div class="avatar__logo">
-    <img alt="" src="{{iconPath}}"/>
+<div class="avatar__wrapper">
+    <div class="avatar__logo">
+        <img alt="" src="{{iconPath}}"/>
+    </div>
+    <div class="avatar__name">{{name}}</div>
 </div>
-<div class="avatar__name">{{name}}</div>
