--- a/src/components/LinkButton/linkButton.hbs
+++ b/src/components/LinkButton/linkButton.hbs
@@ -1,2 +1,4 @@
-<span>{{text}}</span>
-<img alt="" src="{{iconPath}}"/>
+<a class="linkButton" href="{{link}}">
+    <span>{{text}}</span>
+    <img alt="" src="{{iconPath}}"/>
+</a>
