--- a/src/components/RowInfo/rowInfo.hbs
+++ b/src/components/RowInfo/rowInfo.hbs
@@ -1,3 +1,4 @@
-<div class="rowInfo__title">{{label}}</div>
-<div>{{value}}</div>
-
+<div class="rowInfo">
+    <div class="rowInfo__title">{{label}}</div>
+    <div>{{value}}</div>
+</div>
