--- a/src/components/RowInput/rowInput.hbs
+++ b/src/components/RowInput/rowInput.hbs
@@ -1,4 +1,4 @@
-
+<div class="rowInput">
     <div class="rowInput__title">{{placeholder}}</div>
     <div class="rowInput__input">
         {{{input}}}
@@ -6,4 +6,4 @@
             <div class="rowInput__error">{{error}}</div>
         {{/if}}
     </div>
-
+</div>
