--- a/src/pages/HomePage/homePage.hbs
+++ b/src/pages/HomePage/homePage.hbs
@@ -1,21 +1,22 @@
-<div class="main__contacts">
-    <div class="main__profile">
-        {{{lkButton}}}
-    </div>
-</div>
-<div class="main__chatFeed">
-    <div class="main__chatHeader">
-        <div class="main__headerLogo"></div>
-        <div>Имя</div>
-        <img alt="" src="./assets/svg/rubbish.svg"/>
-    </div>
-    <div class="main__messages"></div>
-    <form>
-        <div class="main__sendBlock">
-            <div class="main__attached"></div>
-            <input name="message" class="main__messageInput"/>
-            <button  type="submit" class="main__sendButton">></button>
+<main class="main__wrapper">
+    <div class="main__contacts">
+        <div class="main__profile">
+            {{{lkButton}}}
         </div>
-    </form>
-</div>
-
+    </div>
+    <div class="main__chatFeed">
+        <div class="main__chatHeader">
+            <div class="main__headerLogo"></div>
+            <div>Имя</div>
+            <img alt="" src="./assets/svg/rubbish.svg"/>
+        </div>
+        <div class="main__messages"></div>
+        <form>
+            <div class="main__sendBlock">
+                <div class="main__attached"></div>
+                <input name="message" class="main__messageInput"/>
+                <button  type="submit" class="main__sendButton">></button>
+            </div>
+        </form>
+    </div>
+</main>
