--- a/src/pages/PersonalInfo/personalInfo.hbs
+++ b/src/pages/PersonalInfo/personalInfo.hbs
@@ -1,4 +1,5 @@
-<div class="personalInfo__card">
+<main class="personalInfo__wrapper">
+    <div class="personalInfo__card">
         <div class="personalInfo__avatarBlock">
             {{{avatar}}}
         </div>
@@ -14,8 +15,8 @@
             <span class="personalInfo__actions--blue">{{{editButton}}}</span>
             <span class="personalInfo__actions--red">{{{exitButton}}}</span>
         </div>
-</div>
-
+    </div>
+</main>
 
 
 
