--- a/src/pages/PersonalInfoEdit/personalInfoEdit.hbs
+++ b/src/pages/PersonalInfoEdit/personalInfoEdit.hbs
@@ -1,25 +1,26 @@
-<div class="personalInfoEdit__card">
-    <form>
-        <div class="personalInfoEdit__avatarBlock">
-            {{{photo}}}
-            {{{avatar}}}
-        </div>
-        <div class="personalInfoEdit__info">
-            {{{email}}}
-            {{{login}}}
-            {{{firstName}}}
-            {{{secondName}}}
-            {{{chatName}}}
-            {{{phone}}}
-            {{{oldPassword}}}
-            {{{newPassword}}}
-        </div>
-        <div class="personalInfoEdit__actions">
-            {{{saveButton}}}
-            {{{backButton}}}
-        </div>
-    </form>
-</div>
-
+<main class="personalInfoEdit__wrapper">
+    <div class="personalInfoEdit__card">
+        <form>
+            <div class="personalInfoEdit__avatarBlock">
+                {{{photo}}}
+                {{{avatar}}}
+            </div>
+            <div class="personalInfoEdit__info">
+                {{{email}}}
+                {{{login}}}
+                {{{firstName}}}
+                {{{secondName}}}
+                {{{chatName}}}
+                {{{phone}}}
+                {{{oldPassword}}}
+                {{{newPassword}}}
+            </div>
+            <div class="personalInfoEdit__actions">
+                {{{saveButton}}}
+                {{{backButton}}}
+            </div>
+        </form>
+    </div>
+</main>
 
 
