--- a/src/pages/Registration/registration.hbs
+++ b/src/pages/Registration/registration.hbs
@@ -1,21 +1,22 @@
-<form>
-    <div class="registration__card">
-        <div class="registration__title">Регистрация</div>
-        <div class="registration__inputs">
-            {{{email}}}
-            {{{login}}}
-            {{{firstName}}}
-            {{{secondName}}}
-            {{{phone}}}
-            {{{password}}}
+<main class="registration__wrapper">
+    <form>
+        <div class="registration__card">
+            <div class="registration__title">Регистрация</div>
+            <div class="registration__inputs">
+                {{{email}}}
+                {{{login}}}
+                {{{firstName}}}
+                {{{secondName}}}
+                {{{phone}}}
+                {{{password}}}
+            </div>
+            <div class="registration__buttons">
+                {{{submitButton}}}
+                {{{loginButton}}}
+            </div>
         </div>
-        <div class="registration__buttons">
-            {{{submitButton}}}
-            {{{loginButton}}}
-        </div>
-    </div>
-</form>
-
+    </form>
+</main>
 
 
 
