--- a/src/components/ErrorPageContent/errorPageContent.hbs
+++ b/src/components/ErrorPageContent/errorPageContent.hbs
@@ -1,6 +1,7 @@
-<h1> {{title}} </h1>
-<h3> {{description}} </h3>
-<div class="errorPage__link">
-    {{{button}}}
+<div class="errorPage__wrapper">
+    <h1> {{title}} </h1>
+    <h3> {{description}} </h3>
+    <div class="errorPage__link">
+        {{{button}}}
+    </div>
 </div>
-
