--- a/src/components/FileInput/fileInput.hbs
+++ b/src/components/FileInput/fileInput.hbs
@@ -1,5 +1,7 @@
-<label for="file-upload" class="fileInput__label">{{text}}</label>
-<input required="{{required}}" id="file-upload" class="fileInput__input" type="file" name="{{name}}">
-{{#if error}}
-    <div class="fileInput__error">{{error}}</div>
-{{/if}}
+<div class="fileInput">
+    <label for="file-upload" class="fileInput__label">{{text}}</label>
+    <input required="{{required}}" id="file-upload" class="fileInput__input" type="file" name="{{name}}">
+    {{#if error}}
+        <div class="fileInput__error">{{error}}</div>
+    {{/if}}
+</div>
