--- a/src/styles/variables.pcss
+++ b/src/styles/variables.pcss
@@ -3,5 +3,6 @@
     --red: #FF2F2F;
     --redDark: #9d0000;
     --white: #ffffff;
+    --gray: #A1A1A2FF;
     --card-background: rgba(255, 255, 255, 0.29);
 }
