--- a/src/styles/styles.pcss
+++ b/src/styles/styles.pcss
@@ -15,6 +15,10 @@
 @import "../components/Avatar/avatarStyles.pcss";
 @import "../components/RowInput/rowInputStyles.pcss";
 @import "../components/FileInput/fileInputStyles.pcss";
+@import "../components/Messages/messagesStyles.pcss";
+@import "../components/MessageInput/messageInputStyles.pcss";
+@import "../components/SendMessageIButton/sendMessageIButtonStyles.pcss";
+@import "../components/Contacts/contactsStyles.pcss";
 
 body {
     margin: 0;
