--- a/src/components/Messages/messagesStyles.pcss
+++ b/src/components/Messages/messagesStyles.pcss
@@ -5,11 +5,12 @@
     justify-content: flex-end;
     padding: 0 40px;
 }
+
 .message {
     &__wrapper {
         background-color: var(--white);
         border-radius: 8px;
-        padding: 8px 8px 4px 8px;
+        padding: 8px 8px 4px;
         margin-bottom: 8px;
         display: flex;
         flex-direction: column;
@@ -21,6 +22,7 @@
     &__text {
         font-size: 12px;
     }
+
     &__time{
         text-align: end;
         font-size: 9px;
