--- a/src/components/RowInput/rowInputStyles.pcss
+++ b/src/components/RowInput/rowInputStyles.pcss
@@ -9,6 +9,7 @@
         width: 280px;
 
     }
+
     &__error {
         color: var(--redDark);
         margin-top: 4px;
@@ -16,7 +17,7 @@
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (width <= 768px) {
     .rowInput {
         flex-direction: column;
 
