--- a/src/pages/PersonalInfoEdit/personalInfoEditStyles.pcss
+++ b/src/pages/PersonalInfoEdit/personalInfoEditStyles.pcss
@@ -3,6 +3,7 @@
       display: grid;
       height: 100%;
    }
+
    &__card {
       display: grid;
       place-content: center;
@@ -38,7 +39,7 @@
    }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (width <= 768px) {
    .personalInfoEdit {
       &__card {
          margin: 25px;
