--- a/src/styles/styles.pcss
+++ b/src/styles/styles.pcss
@@ -1,24 +1,22 @@
-@import "variables.pcss";
-
-@import "../pages/HomePage/homePage.pcss";
-@import "../pages/Authorization/authorizationStyles.pcss";
-@import "../pages/Registration/registrationStyles.pcss";
-@import "../pages/PersonalInfo/personalInfoStyles.pcss";
-@import "../pages/PersonalInfoEdit/personalInfoEditStyles.pcss";
-
-@import "../components/LinkButton/linkButtonStyles.pcss";
-@import "../components/ErrorPageContent/errorPageContentStyles.pcss";
-@import "../components/linkButton/linkButtonStyles.pcss";
-@import "../components/SimpleInput/simpleInputStyles.pcss";
-@import "../components/Button/buttonStyles.pcss";
-@import "../components/RowInfo/rowInfoStyles.pcss";
-@import "../components/Avatar/avatarStyles.pcss";
-@import "../components/RowInput/rowInputStyles.pcss";
-@import "../components/FileInput/fileInputStyles.pcss";
-@import "../components/Messages/messagesStyles.pcss";
-@import "../components/MessageInput/messageInputStyles.pcss";
-@import "../components/SendMessageIButton/sendMessageIButtonStyles.pcss";
-@import "../components/Contacts/contactsStyles.pcss";
+@import url("variables.pcss");
+@import url("../pages/HomePage/homePage.pcss");
+@import url("../pages/Authorization/authorizationStyles.pcss");
+@import url("../pages/Registration/registrationStyles.pcss");
+@import url("../pages/PersonalInfo/personalInfoStyles.pcss");
+@import url("../pages/PersonalInfoEdit/personalInfoEditStyles.pcss");
+@import url("../components/LinkButton/linkButtonStyles.pcss");
+@import url("../components/ErrorPageContent/errorPageContentStyles.pcss");
+@import url("../components/linkButton/linkButtonStyles.pcss");
+@import url("../components/SimpleInput/simpleInputStyles.pcss");
+@import url("../components/Button/buttonStyles.pcss");
+@import url("../components/RowInfo/rowInfoStyles.pcss");
+@import url("../components/Avatar/avatarStyles.pcss");
+@import url("../components/RowInput/rowInputStyles.pcss");
+@import url("../components/FileInput/fileInputStyles.pcss");
+@import url("../components/Messages/messagesStyles.pcss");
+@import url("../components/MessageInput/messageInputStyles.pcss");
+@import url("../components/SendMessageIButton/sendMessageIButtonStyles.pcss");
+@import url("../components/Contacts/contactsStyles.pcss");
 
 body {
     margin: 0;
@@ -27,12 +25,11 @@ body {
     height: 100vh;
     background: red;
     background: linear-gradient(243.03deg, var(--blue) 0%, var(--red) 131.67%);
-    font-family: 'Inter', sans-serif;
+    font-family: Inter, sans-serif;
     font-style: normal;
     font-size: 16px;
-
-    font-size: 16px;
 }
+
 #root{
     height: 100%;
 }
