--- a/src/styles/variables.pcss
+++ b/src/styles/variables.pcss
@@ -1,8 +1,8 @@
 :root {
-    --blue: #3369F3;
-    --red: #FF2F2F;
+    --blue: #3369f3;
+    --red: #ff2f2f;
     --redDark: #9d0000;
-    --white: #ffffff;
-    --gray: #A1A1A2FF;
-    --card-background: rgba(255, 255, 255, 0.29);
+    --white: #fff;
+    --gray: #a1a1a2ff;
+    --card-background: rgb(255 255 255 / 29%);
 }
