--- a/src/components/Avatar/avatarStyles.pcss
+++ b/src/components/Avatar/avatarStyles.pcss
@@ -5,6 +5,7 @@
         row-gap: 24px;
         align-items: center;
     }
+
     &__logo {
         height: 130px;
         width: 130px;
@@ -13,21 +14,24 @@
         display: flex;
         align-items: center;
         justify-content: center;
+
         img {
             width: 70%;
             height: 70%;
         }
     }
+
     &__name {
         font-size: 16px;
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (width <= 768px) {
     .avatar {
         &__wrapper {
             row-gap: 16px;
         }
+
         &__logo {
            height: 65px;
            width: 65px;
