--- a/src/components/LinkButton/linkButtonStyles.pcss
+++ b/src/components/LinkButton/linkButtonStyles.pcss
@@ -11,17 +11,19 @@
     text-decoration:none;
     color: var(--white);
     font-size: 14px;
+
     &:hover {
         text-underline-offset: 3px;
         text-decoration: underline;
     }
+
     :active {
         color: var(--blue)
     }
 
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (width <= 768px) {
     .linkButton{
         font-size: 12px;
     }
