--- a/src/components/RowInfo/rowInfoStyles.pcss
+++ b/src/components/RowInfo/rowInfoStyles.pcss
@@ -6,7 +6,7 @@
     justify-content: space-between;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (width <= 768px) {
     .rowInfo {
         flex-direction: column;
 
