--- a/src/pages/Registration/registrationStyles.pcss
+++ b/src/pages/Registration/registrationStyles.pcss
@@ -36,7 +36,7 @@
    }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (width <= 768px) {
    .registration {
       &__title {
          font-size: 16px;
