Добавил роутинг и авторизацию

--- a/src/pages/Authorization/authorization.hbs
+++ b/src/pages/Authorization/authorization.hbs
@@ -1,11 +1,11 @@
-<main class="authorization__wrapper">
+<main class="{{styles.authorization__wrapper}}">
     <form>
-        <div class="authorization__card">
-            <div class="authorization__inputs">
+        <div class="{{styles.authorization__card}}">
+            <div class="{{styles.authorization__inputs}}">
                 {{{login}}}
                 {{{password}}}
             </div>
-            <div class="authorization__buttons">
+            <div class="{{styles.authorization__buttons}}">
                 {{{button}}}
                 {{{registration}}}
             </div>
