--- a/src/pages/PersonalInfo/personalInfo.hbs
+++ b/src/pages/PersonalInfo/personalInfo.hbs
@@ -13,6 +13,7 @@
         </div>
         <div class="personalInfo__actions">
             <span class="personalInfo__actions--blue">{{{editButton}}}</span>
+            <span class="personalInfo__actions">{{{backButton}}}</span>
             <span class="personalInfo__actions--red">{{{exitButton}}}</span>
         </div>
     </div>
