--- a/src/pages/Registration/registration.hbs
+++ b/src/pages/Registration/registration.hbs
@@ -1,8 +1,8 @@
-<main class="registration__wrapper">
+<main class="{{styles.registration__wrapper}}">
     <form>
-        <div class="registration__card">
-            <div class="registration__title">Регистрация</div>
-            <div class="registration__inputs">
+        <div class="{{styles.registration__card}}">
+            <div class="{{styles.registration__title}}">Регистрация</div>
+            <div class="{{styles.registration__inputs}}">
                 {{{email}}}
                 {{{login}}}
                 {{{firstName}}}
@@ -10,7 +10,7 @@
                 {{{phone}}}
                 {{{password}}}
             </div>
-            <div class="registration__buttons">
+            <div class="{{styles.registration__buttons}}">
                 {{{submitButton}}}
                 {{{loginButton}}}
             </div>
