--- a/src/components/ErrorPageContent/errorPageContent.hbs
+++ b/src/components/ErrorPageContent/errorPageContent.hbs
@@ -1,7 +1,7 @@
-<div class="errorPage__wrapper">
+<div class="{{styles.errorPage__wrapper}}">
     <h1> {{title}} </h1>
     <h3> {{description}} </h3>
-    <div class="errorPage__link">
+    <div class="{{styles.errorPage__link}}">
         {{{button}}}
     </div>
 </div>
