Настроил редактирование профиля

--- a/src/components/Button/buttonStyles.module.pcss
+++ b/src/components/Button/buttonStyles.module.pcss
@@ -13,6 +13,9 @@
         color: var(--white);
     }
 }
+.generalButtonSmall{
+    padding: 8px 20px;
+}
 
 @media screen and (width <= 768px) {
     .generalButton {
