--- a/src/pages/PersonalInfo/personalInfo.hbs
+++ b/src/pages/PersonalInfo/personalInfo.hbs
@@ -1,9 +1,9 @@
-<main class="personalInfo__wrapper">
-    <div class="personalInfo__card">
-        <div class="personalInfo__avatarBlock">
+<main class="{{styles.personalInfo__wrapper}}">
+    <div class="{{styles.personalInfo__card}}">
+        <div class="{{styles.personalInfo__avatarBlock}}">
             {{{avatar}}}
         </div>
-        <div class="personalInfo__info">
+        <div class="{{styles.personalInfo__info}}">
             {{{email}}}
             {{{login}}}
             {{{firstName}}}
@@ -11,10 +11,10 @@
             {{{chatName}}}
             {{{phone}}}
         </div>
-        <div class="personalInfo__actions">
-            <span class="personalInfo__actions--blue">{{{editButton}}}</span>
-            <span class="personalInfo__actions">{{{backButton}}}</span>
-            <span class="personalInfo__actions--red">{{{exitButton}}}</span>
+        <div class="{{styles.personalInfo__actions}}">
+            <span class="{{styles.personalInfo__actions--blue}}">{{{editButton}}}</span>
+            <span class="{{styles.personalInfo__actions}}">{{{backButton}}}</span>
+            <span class="{{styles.personalInfo__actions--red}}">{{{exitButton}}}</span>
         </div>
     </div>
 </main>
