--- a/src/pages/HomePage/homePage.pcss
+++ b/src/pages/HomePage/homePage.pcss
@@ -3,7 +3,7 @@
         display: grid;
         grid-template-columns: 400px 1fr;
         column-gap: 16px;
-        height: 100%;
+        height: 100vh;
         padding: 16px;
         box-sizing: border-box;
     }
