--- a/src/pages/PersonalInfo/personalInfoStyles.module.pcss
+++ b/src/pages/PersonalInfo/personalInfoStyles.module.pcss
@@ -1,14 +1,14 @@
-.personalInfoEdit{
+.personalInfo{
    &__wrapper {
       display: grid;
-      height: 100%;
+      height: 100vh;
    }
 
    &__card {
       display: grid;
       place-content: center;
-      margin: 50px;
       padding: 16px;
+      margin: 50px;
       background-color: var(--card-background);
       border-radius: 50px;
       color: var(--white);
@@ -16,10 +16,6 @@
 
    &__avatarBlock {
       margin-bottom: 60px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      row-gap: 16px;
    }
 
    &__info {
@@ -33,14 +29,27 @@
    &__actions {
       display: flex;
       flex-direction: column;
-      gap: 8px;
-      justify-content: center;
-      align-items: center;
+      row-gap: 16px;
+
+      &--red {
+         a {
+            font-size: 16px;
+            color: var(--red);
+         }
+      }
+
+      &--blue{
+         a {
+            font-size: 16px;
+            color: var(--blue);
+         }
+      }
+
    }
 }
 
 @media screen and (width <= 768px) {
-   .personalInfoEdit {
+   .personalInfo {
       &__card {
          margin: 25px;
          font-size: 14px;
@@ -50,6 +59,24 @@
       &__info {
          width: 150px;
          row-gap: 16px;
+         margin-bottom: 16px;
+
+      }
+
+      &__actions {
+         &--red {
+            a {
+               font-size: 14px;
+
+            }
+         }
+
+         &--blue{
+            a {
+               font-size: 14px;
+
+            }
+         }
       }
    }
 }
