--- a/src/pages/PersonalInfoEdit/personalInfoEditStyles.module.pcss
+++ b/src/pages/PersonalInfoEdit/personalInfoEditStyles.module.pcss
@@ -1,14 +1,14 @@
-.personalInfo{
+.personalInfoEdit{
    &__wrapper {
       display: grid;
-      height: 100%;
+      height: 100vh;
    }
 
    &__card {
       display: grid;
       place-content: center;
-      padding: 16px;
       margin: 50px;
+      padding: 16px;
       background-color: var(--card-background);
       border-radius: 50px;
       color: var(--white);
@@ -16,10 +16,14 @@
 
    &__avatarBlock {
       margin-bottom: 60px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      row-gap: 16px;
    }
 
    &__info {
-      margin-bottom: 60px;
+      margin-bottom: 16px;
       width: 500px;
       display: flex;
       flex-direction: column;
@@ -29,27 +33,19 @@
    &__actions {
       display: flex;
       flex-direction: column;
-      row-gap: 16px;
-
-      &--red {
-         a {
-            font-size: 16px;
-            color: var(--red);
-         }
-      }
-
-      &--blue{
-         a {
-            font-size: 16px;
-            color: var(--blue);
-         }
-      }
-
+      gap: 8px;
+      justify-content: center;
+      align-items: center;
+      margin-top: 24px;
+   }
+   &__title{
+      text-align: center;
+      margin-top: 24px;
    }
 }
 
 @media screen and (width <= 768px) {
-   .personalInfo {
+   .personalInfoEdit {
       &__card {
          margin: 25px;
          font-size: 14px;
@@ -59,24 +55,6 @@
       &__info {
          width: 150px;
          row-gap: 16px;
-         margin-bottom: 16px;
-
-      }
-
-      &__actions {
-         &--red {
-            a {
-               font-size: 14px;
-
-            }
-         }
-
-         &--blue{
-            a {
-               font-size: 14px;
-
-            }
-         }
       }
    }
 }
