--- a/src/styles/styles.pcss
+++ b/src/styles/styles.pcss
@@ -1,10 +1,8 @@
 @import url("variables.pcss");
 @import url("../pages/HomePage/homePage.pcss");
-@import url("../pages/PersonalInfo/personalInfoStyles.pcss");
-@import url("../pages/PersonalInfoEdit/personalInfoEditStyles.pcss");
 @import url("../components/LinkButton/linkButtonStyles.pcss");
 @import url("../components/SimpleInput/simpleInputStyles.pcss");
-@import url("../components/Button/buttonStyles.pcss");
+@import url("../components/Button/buttonStyles.module.pcss");
 @import url("../components/RowInfo/rowInfoStyles.pcss");
 @import url("../components/Avatar/avatarStyles.pcss");
 @import url("../components/RowInput/rowInputStyles.pcss");
@@ -18,7 +16,8 @@ body {
     margin: 0;
     padding: 0;
     width: 100vw;
-    height: 100vh;
+    height: 100%;
+    min-height: 100vh;
     background: red;
     background: linear-gradient(243.03deg, var(--blue) 0%, var(--red) 131.67%);
     font-family: Inter, sans-serif;
