Добавил создание и выбор чата

--- a/src/components/Button/buttonStyles.module.pcss
+++ b/src/components/Button/buttonStyles.module.pcss
@@ -7,6 +7,9 @@
     font-size: inherit;
     font-family: inherit;
     border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     &:active{
         background-color: var(--blue);
