--- a/src/pages/HomePage/homePage.hbs
+++ b/src/pages/HomePage/homePage.hbs
@@ -1,22 +1,16 @@
-<main class="main__wrapper">
-    <div class="main__contacts">
-        <div class="main__profile">
-            {{{lkButton}}}
-        </div>
-        {{{contacts}}}
+<main class="{{styles.main__wrapper}}">
+    <div class="{{styles.main__chats}}">
+       {{{chatsHeader}}}
+        {{{chats}}}
     </div>
-    <div class="main__chatFeed">
-        <div class="main__chatHeader">
-            <div class="main__headerLogo"></div>
-            <div>Имя</div>
-            <img alt="" src="./assets/svg/rubbish.svg"/>
-        </div>
-        <div class="main__messages">
+    <div class="{{styles.main__chatFeed}}">
+        {{{mainHeader}}}
+        <div class="{{styles.main__messages}}">
             {{{messages}}}
         </div>
         <form novalidate>
-            <div class="main__sendBlock">
-                <div class="main__attached"></div>
+            <div class="{{styles.main__sendBlock}}">
+                <div class="{{styles.main__attached}}"></div>
                 {{{messageInput}}}
                 {{{messageButton}}}
             </div>
