--- a/src/pages/HomePage/homePage.module.pcss
+++ b/src/pages/HomePage/homePage.module.pcss
@@ -8,17 +8,9 @@
         box-sizing: border-box;
     }
 
-    &__contacts {
+    &__chats {
         background-color: var(--card-background);
         border-radius: 8px;
-    }
-
-    &__profile{
-        padding: 24px 16px;
-        display: flex;
-        justify-content: flex-end;
-        align-items: center;
-        column-gap: 4px;
     }
 
     &__chatFeed {
@@ -38,27 +30,6 @@
         display: grid;
         column-gap: 16px;
         grid-template-columns: auto 1fr auto;
-    }
-
-    &__chatHeader {
-        background-color: var(--card-background);
-        border-radius: 8px;
-        column-gap: 16px;
-        padding: 8px 40px;
-        display: grid;
-        grid-template-columns: auto 1fr auto;
-        align-items: center;
-
-        img {
-            width: 16px;
-        }
-    }
-
-    &__headerLogo{
-        background-color: var(--white);
-        border-radius: 100px;
-        width: 36px;
-        height: 36px;
     }
 
     &__messages {
