--- a/src/components/Button/button.hbs
+++ b/src/components/Button/button.hbs
@@ -1,1 +1,4 @@
-<button class="{{className}}" type="{{type}}">{{text}}</button>
+<button class="{{className}}" type="{{type}}">
+    <img style="width: {{logoSize}}px" src="{{img}}" alt=""/>
+    {{text}}
+</button>
