Добавил вебсокеты и отправку сообщений

--- a/src/components/Avatar/avatar.hbs
+++ b/src/components/Avatar/avatar.hbs
@@ -1,6 +1,6 @@
-<div class="avatar__wrapper">
-    <div class="avatar__logo">
+<div class="{{styles.avatar__wrapper}}">
+    <div class="{{styles.avatar__logo}}">
         <img alt="" src="https://ya-praktikum.tech/api/v2/resources/{{iconPath}}"/>
     </div>
-    <div class="avatar__name">{{name}}</div>
+    <div class="{{styles.avatar__name}}">{{name}}</div>
 </div>
