--- a/src/components/LinkButton/linkButton.hbs
+++ b/src/components/LinkButton/linkButton.hbs
@@ -1,4 +1,4 @@
-<a class="linkButton" href="{{link}}">
+<a class="{{styles.linkButton}}" href="{{link}}">
     <span>{{text}}</span>
     <img alt="" src="{{iconPath}}"/>
 </a>
