--- a/src/components/Messages/messagesStyles.pcss
+++ b/src/components/Messages/messagesStyles.pcss
@@ -29,12 +29,11 @@
         color: var(--gray);
     }
 
-    &__send {
+    &__sender {
         align-self: flex-end;
     }
 
-    &__incoming {
+    &__receiver {
         align-self: flex-start;
-
     }
 }
