--- a/src/components/MessageInput/messageInput.hbs
+++ b/src/components/MessageInput/messageInput.hbs
@@ -1,10 +1,9 @@
-
-        <div class="sendMessage__messageContainer">
-            <input type="text"  required="{{required}}" value="{{value}}" placeholder="{{placeholder}}" name="message" class="sendMessage__messageInput"/>
-            {{#if error}}
-                <div class="sendMessage__error">{{error}}</div>
-            {{/if}}
-        </div>
+<div class="{{styles.sendMessage__messageContainer}}">
+    <input type="text"  required="{{required}}" value="{{value}}" placeholder="{{placeholder}}" name="message" class="{{styles.sendMessage__messageInput}}"/>
+    {{#if error}}
+        <div class="{{styles.sendMessage__error}}">{{error}}</div>
+    {{/if}}
+</div>
 
 
 
