Настроил редактирование пользователей в чате

--- a/src/components/Chat/chats.hbs
+++ b/src/components/Chat/chats.hbs
@@ -1,5 +1,5 @@
 
-<div id="{{this.id}}" class="{{styles.chat__wrapper}} {{#if isSelected }}{{ styles.chat__wrapper--selected }}{{/if}}">
+<div id="{{this.userId}}" class="{{styles.chat__wrapper}} {{#if isSelected }}{{ styles.chat__wrapper--selected }}{{/if}}">
     <div>
         {{#if this.avatar}}
             <img class="{{styles.chat__photo}}" alt="" src="https://ya-praktikum.tech/api/v2/resources/{{this.avatar}}"/>
