--- a/src/components/MainHeader/mainHeader.hbs
+++ b/src/components/MainHeader/mainHeader.hbs
@@ -1,6 +1,8 @@
 <div class="{{styles.chatHeader}}">
-    <div class="{{styles.chatHeader__logo}}"></div>
-    <div>{{title}}</div>
-    {{{addUsersButton}}}
-    {{{deleteChatButton}}}
+    <div class="{{styles.actions}}">
+        <div class="{{styles.chatHeader__logo}}"></div>
+        <div>{{title}}</div>
+        {{{addUsersButton}}}
+        {{{deleteChatButton}}}
+    </div>
 </div>
