--- a/src/components/Messages/messagesStyles.pcss
+++ b/src/components/Messages/messagesStyles.pcss
@@ -1,9 +1,10 @@
-.messages__container{
+.messages__container {
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
     padding: 0 40px;
+    overflow-y: scroll; /* Добавляем прокрутку */
 }
 
 .message {
