--- a/src/components/Chat/chatStyles.module.pcss
+++ b/src/components/Chat/chatStyles.module.pcss
@@ -57,4 +57,12 @@
         place-items: center;
     }
 
+    &__logo {
+        width: 36px;
+        height: 36px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
 }
