--- a/src/components/Chat/chats.hbs
+++ b/src/components/Chat/chats.hbs
@@ -2,7 +2,7 @@
 <div id="{{this.userId}}" class="{{styles.chat__wrapper}} {{#if isSelected }}{{ styles.chat__wrapper--selected }}{{/if}}">
     <div>
         {{#if this.avatar}}
-            <img class="{{styles.chat__photo}}" alt="" src="https://ya-praktikum.tech/api/v2/resources/{{this.avatar}}"/>
+            <img class="{{styles.chat__logo}}" alt="" src="https://ya-praktikum.tech/api/v2/resources/{{this.avatar}}"/>
         {{else}}
             <div class="{{styles.chat__circle}}"></div>
         {{/if}}
