--- a/src/components/MainHeader/mainHeader.hbs
+++ b/src/components/MainHeader/mainHeader.hbs
@@ -1,6 +1,6 @@
 <div class="{{styles.chatHeader}}">
     <div class="{{styles.actions}}">
-        <div class="{{styles.chatHeader__logo}}"></div>
+        <div class="{{styles.chatHeader__logo}}">{{{logoButton}}}</div>
         <div>{{title}}</div>
         {{{addUsersButton}}}
         {{{deleteChatButton}}}
