--- a/src/components/MainHeader/mainHeaderStyles.module.pcss
+++ b/src/components/MainHeader/mainHeaderStyles.module.pcss
@@ -11,16 +11,11 @@
         grid-template-columns: auto 1fr auto auto;
         align-items: center;
         column-gap: 16px;
-
-        img {
-            width: 16px;
-        }
     }
 
     &__logo{
-        background-color: var(--white);
-        border-radius: 100px;
         width: 36px;
         height: 36px;
+        cursor: pointer;
     }
 }
