--- a/src/components/FileInput/fileInputStyles.module.pcss
+++ b/src/components/FileInput/fileInputStyles.module.pcss
@@ -18,4 +18,22 @@
         margin-top: 4px;
         font-size: 12px;
     }
+
+    &__logo {
+        background-color: var(--white);
+        border-radius: 100px;
+        width: 36px;
+        height: 36px;
+        background-size: cover;
+        background-position: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+
+        img{
+            width: 32px;
+            height: 32px;
+        }
+    }
 }
