--- a/src/components/RowInfo/rowInfo.hbs
+++ b/src/components/RowInfo/rowInfo.hbs
@@ -1,4 +1,4 @@
-<div class="rowInfo">
-    <div class="rowInfo__title">{{label}}</div>
+<div class="{{styles.rowInfo}}">
+    <div class="{{styles.rowInfo__title}}">{{label}}</div>
     <div>{{value}}</div>
 </div>
