--- a/src/components/SimpleInput/simpleInput.hbs
+++ b/src/components/SimpleInput/simpleInput.hbs
@@ -1,8 +1,8 @@
-<div class="simpleInput__wrapper">
-    <input required="{{required}}" name="{{name}}" type="{{type}}" value="{{value}}" class="simpleInput__item" placeholder=" "/>
-    <label class="simpleInput__label" >{{label}}</label>
+<div class="{{styles.simpleInput__wrapper}}">
+    <input required="{{required}}" name="{{name}}" type="{{type}}" value="{{value}}" class="{{styles.simpleInput__item}}" placeholder=" "/>
+    <label class="{{styles.simpleInput__label}}" >{{label}}</label>
     {{#if error}}
-        <div class="simpleInput__error">{{error}}</div>
+        <div class="{{styles.simpleInput__error}}">{{error}}</div>
     {{/if}}
 </div>
 
